add dependencies and readme